# MediaMaster

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/source/media_master_v2/: DEVELOPMENT_LOG.md  MEDIA_MASTER_V2_ARCHITECTURE.md  MEDIA_MASTER_V2_SPEC.md  README.md  media-master-v2-mockup.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: audit.rs  ffmpeg.rs  jobs.rs  media.rs  mod.rs  purge.rs  safe_delete.rs  scan.rs  settings.rs  shell.rs  tags.rs  vlc.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/services/: audit.rs  ffmpeg.rs  ffprobe.rs  folder_tree.rs  holding.rs  job_runner.rs  mod.rs  scanner.rs  thumbnailer.rs  vlc.rs
src/app/: App.tsx
src/components/media/: MediaContextMenu.tsx  MediaGrid.tsx  MediaPreview.tsx  MediaTile.tsx  MediaViewerModal.tsx
src/components/shared/: TagChip.tsx  Toast.tsx
src/components/shell/: FfmpegStatusIcon.tsx  JobTray.tsx  RightPanel.tsx  Sidebar.tsx  SourceFolderList.tsx  TopBar.tsx
src/features/audit/: AuditMode.tsx
src/features/browse/: BrowseMode.tsx
src/features/purge/: PurgeMode.tsx
src/features/safe-delete/: SafeDeleteMode.tsx
src/features/tagging/: TaggingMode.tsx
src/hooks/: useLibrarySelectors.ts  usePurgeSelectors.ts
src/lib/: catalog.ts  format.ts  mockData.ts  tauri.ts  types.ts
src/stores/: appStore.ts  jobsStore.ts  libraryStore.ts  purgeStore.ts
src/styles/: app.css  tokens.css
