[package]
name = "media-master"
version = "0.1.0"
description = "Media Master — local-first media cleanup cockpit"
authors = ["MacePh"]
edition = "2021"

[lib]
name = "media_master_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
tokio = { version = "1", features = ["rt"] }
